--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,6 @@ jobs:
     - name: Publish NuGet package
       uses: nuget/publish@1
       with:
-        nuget-api-key: ${{ secrets.NUGET_API_KEY }} 
-        nuget-version: '8.0.x'  # Adjust NuGet version as needed
+        nuget-api-key: ${{ secrets.NUGET_API_KEY_FULL_PERMS }} 
+        nuget-version: '8.0.x'
         nuget-package: './artifacts/*.nupkg'
