--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,4 @@ jobs:
       run: dotnet pack --output ./artifacts
 
     - name: Publish NuGet package
-      uses: nuget/publish@1
-      with:
-        nuget-api-key: ${{ secrets.NUGET_API_KEY_FULL_PERMS }} 
-        nuget-version: '8.0.x'
-        nuget-package: './artifacts/*.nupkg'
+      run: dotnet nuget push ./artifacts/*.nupkg --api-key ${{ secrets.NUGET_API_KEY_FULL_PERMS }} --source https://api.nuget.org/v3/index.json
